--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <h1>Welcome To My Art Portfolio!</h1>
   </div>
 
-  <a href="drawings.html">
-    <img class="myImg2" src="img/my-drawings-button.png" alt="My Drawings" style="margin: 30%; margin-top: 12%; margin-bottom: 5%;">
+  <img src="img/profile-pic-6.png" style="margin: 7%; margin-top: 7%; margin-bottom: 0%;">
+
+  <a href="drawings18.html">
+    <img class="myImg2" src="img/my-drawings-button.png" alt="My Drawings" style="margin: 30%; margin-top: 5%; margin-bottom: 3%;">
   </a>
 
   <a href="music.html">
-    <img class="myImg2" src="img/my-music-button.png" alt="My Music" style="margin: 30%; margin-top: 0px; margin-bottom: 5%;">
+    <img class="myImg2" src="img/my-music-button.png" alt="My Music" style="margin: 20%; margin-top: 0%; margin-bottom: 5%;">
   </a>
-
-<img src="img/profile-pic-6.png" style="margin: 7%; margin-top: 0px;">
 
 </body>
 
