--- a/music.html
+++ b/music.html
@@ -14,27 +14,35 @@
 
 <div class="text">
 
-  <div class="topnav">
-  <a href="index.html">Home</a>
-  <a href="drawings.html">My Drawings</a>
-  <a class="active" href="music.html">My Music</a>
+  <div class="navbar">
+<a href="index.html">Home</a>
+<div class="dropdown">
+  <button class="dropbtn">Drawings
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-content">
+    <a href="drawings18.html">2018</a>
+    <a href="drawings17.html">2017</a>
+  </div>
+</div>
+<a href="music.html">My Music</a>
 </div>
 
   <div class="header">
   </div>
 
-  <h2>Introduction</h2>
+  <h1>Introduction</h1>
 
-  <p style="margin-top: 50px;">
-    I only recently learned how to play the ukulele by watching YouTube and I really enjoy it. But I have been playing piano for about four years.
+  <p style="margin-top: 50px; font-size: 25px;">
+    I only recently learned how to play the ukulele by watching YouTube and I really enjoy it. But I have been playing piano for about four years but in the year 2018 I have been learning Guitar.
     I really like musicals so a lot of the things I want to learn are from musicals. I also really want to start writing my
-    own songs. <br /> Hope you like it!
+    own songs. Hope you like it!
   </p>
 
 
 
 
-<div style="float: left; margin-left: 7%;">
+<div style="float: left; margin-left: 19%;">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Z8Trz2rLKh0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <div style="text-align: center;"><p>Click the download button to download chord sheet.</p></div>
   <a href="img/blobfishsongchordsheet.pdf" download>
@@ -51,7 +59,14 @@
   </a>
 </div>
 
+<footer>
+  <img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/profile-pic-6.png" alt="Logo" />
 
+  <p style="float: left; margin-left: 2%; text-align: left; margin-top: 2%;">
+    <a style="color: white; font-size: 30px;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank"><br /> <br />Check out my YouTube Channel!</a> <br /> <br />
+    <a style="color: white; font-size: 30px;" href="https://github.com/NerdyKittyProgrammer" target="_blank"> Check out my GitHub!</a>
+  </p>
+</footer>
 
 
   <!-- The Modal -->
@@ -85,16 +100,9 @@
   </script>
 
 
-  <footer>
-    <img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/profile-pic-6.png" alt="Logo" />
 
-    <p style="float: left; margin-left: 2%; text-align: left; margin-top: 2%;">
-      <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank"><br /> <br />Check out my YouTube Channel!</a> <br /> <br />
-      <a style="color: white;" href="https://github.com/NerdyKittyProgrammer" target="_blank"> Check out my GitHub!</a>
-    </p>
-  </footer>
 
-  <p style="float: left; margin-left: 20%;">
+  <p style="float: left; margin-left: 20%; font-size: 30px;">
     &copy; 2018 Serendipity Art, All rights reserved.
   </p>
 
