--- a/drawings17.html
+++ b/drawings17.html
@@ -33,8 +33,8 @@
   <h1>Introduction</h1>
 
   <p style="margin-top: 50px; font-size: 25px;">
-    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My drawings will be organized by my oldest at
-    the bottom and my latest at the top. <br /> Hope you like it!
+  I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors,
+  and digital art. Here are some of my drawings from 2017, they will be organized by my oldest at the bottom and my latest at the top. Hope you like it!
   </p>
 
   <h2>2017</h2>
