--- a/drawings18.html
+++ b/drawings18.html
@@ -8,7 +8,7 @@
   <title>Serendipity Art</title>
   <link rel="icon" href="img/profile-pic-6.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
+
 </head>
 
 <body>
@@ -35,8 +35,8 @@
   <h1>Introduction</h1>
 
   <p style="margin-top: 50px; font-size: 25px;">
-    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My drawings will be organized by my oldest at
-    the bottom and my latest at the top. <br /> Hope you like it!
+    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors,
+    and digital art. Here are some of my drawings from 2018, they will be organized by my oldest at the bottom and my latest at the top. Hope you like it!
   </p>
   <h2>2018</h2>
 
