--- a/drawings18.html
+++ b/drawings18.html
@@ -35,8 +35,10 @@
   <h1>Introduction</h1>
 
   <p style="margin-top: 50px; font-size: 25px;">
-    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors,
-    and digital art. Here are some of my drawings from 2018, they will be organized by my oldest at the bottom and my latest at the top. Hope you like it!
+    Hello, I'm 13 now and my drawing obsession has not stoped. I know I said 2017 was the year I really wanted to grow in my art but really it's 2018. Sure 2017 was when I had the idea but that
+    was near the end of the year and I think I really made that a reality this year. At the begining of this year I mostly drew portraits of people and didn't really try to do full body stuff.
+    But as the year goes by you can see my attempt at tring to do that. And if you
+    go even farther you see I do more painting that maybe took 20 minutes or so. So I think have grown a lot this year and this is what I have to share! Enjoy!
   </p>
   <h2>2018</h2>
 
