--- a/music.html
+++ b/music.html
@@ -35,29 +35,35 @@
 
   <p style="margin-top: 50px; font-size: 25px;">
     I only recently learned how to play the ukulele by watching YouTube and I really enjoy it. But I have been playing piano for about four years but in the year 2018 I have been learning Guitar.
-    I really like musicals so a lot of the things I want to learn are from musicals. I also really want to start writing my
-    own songs. Hope you like it!
+    I really like musicals so a lot of the things I want to learn are from musicals.  I also really want to start writing my
+    own songs. The more I get into music and wanting to write my own songs the more I realize that I'm not the best at singing but I can create art that I want and no one can stop me. So if I want
+    to write song I'm gonna do it reguarless of my sing abilities. So that's the music part of my website, enjoy!
   </p>
 
 
 
 
-<div style="float: left; margin-left: 19%;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/Z8Trz2rLKh0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div style="margin-left: 10%; margin-right: 10%; margin-top: 3%;">
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/Z8Trz2rLKh0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <div style="text-align: center;"><p>Click the download button to download chord sheet.</p></div>
   <a href="img/blobfishsongchordsheet.pdf" download>
-    <button class="btn"><i class="fa fa-download"></i> Download</button>
+    <button class="btn" style="margin-bottom: 3%;"><i class="fa fa-download"></i> Download</button>
   </a>
 </div>
 
+<p style="margin-bottom: 5%; font-size: 30px;">This is a song a friend and I wrote on one random day where we both were very bored. We decided we were gonna write a song and the first thing that came out of my mouth was "Why don't we
+  write a song about blobfish? We can look up some random facts and it will be a fun educational adventure!". So I hope you enjoy this wonderfuly weird song. </p>
 
-<div style="float: left; margin-left:5%;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/3894C2AB8xA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div style="margin-left: 10%; margin-right: 10%; margin-top: 3%;">
+  <iframe width="853" height="480" src="https://www.youtube.com/embed/3894C2AB8xA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <div style="text-align: center;"><p>Click the download button to download chord sheet.</p></div>
   <a href="img/thewayIdo-chordsheet.pdf" download>
     <button class="btn"><i class="fa fa-download"></i> Download</button>
   </a>
 </div>
+
+<p style="margin-bottom: 5%; font-size: 30px;">This is a cover from one of my absolute favorite musicals of all time. (And that's saying a lot I love musicals) It's called Starship,
+the song I covered was called "The Way I Do" by Darren Criss. Making this cover taught me that even though I'm not great at singing I still do my best and I can release it to the world!</p>
 
 <footer>
   <img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/profile-pic-6.png" alt="Logo" />
