--- a/music.html
+++ b/music.html
@@ -35,35 +35,32 @@
 
   <p style="margin-top: 50px; font-size: 25px;">
     I only recently learned how to play the ukulele by watching YouTube and I really enjoy it. But I have been playing piano for about four years but in the year 2018 I have been learning Guitar.
-    I really like musicals so a lot of the things I want to learn are from musicals.  I also really want to start writing my
+    I really like musicals so a lot of the things I want to learn are from musicals. I also really love writing my
     own songs. The more I get into music and wanting to write my own songs the more I realize that I'm not the best at singing but I can create art that I want and no one can stop me. So if I want
-    to write song I'm gonna do it reguarless of my sing abilities. So that's the music part of my website, enjoy!
+    to write song I'm gonna do it reguarless of my sing abilities. These are some of my original songs that are posted on YouTube. Below them you can see my experience on writting the song and
+    what the song is about. So that's the music part of my website, enjoy!
   </p>
 
 
+  <div style="margin-left: 10%; margin-right: 10%; margin-top: 3%;">
+    <iframe width="853" height="505" src="https://www.youtube.com/embed/SlMAn0-jkE4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </a>
+  </div>
 
+  <p style="margin-bottom: 5%; font-size: 30px;">This song is about when you're doing something random and out of nowhere you think about a random happy memory and the next second you're smiling.
+  When this happens to me it's usually about either something a person said and I laughed or it just made me happy. And it just happens at the strangest times. So I wrote this song about that
+experience. While I was writing it I wanted the person that I was talking about in the song as vague as posible. That way it could be universal to a lot of people. For example it could be your
+significt other or a friend or a familiy member. I wanted that to be a blank for my audience to fill in. So I hope you enjoy the song!</p>
 
 <div style="margin-left: 10%; margin-right: 10%; margin-top: 3%;">
-  <iframe width="853" height="480" src="https://www.youtube.com/embed/Z8Trz2rLKh0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <div style="text-align: center;"><p>Click the download button to download chord sheet.</p></div>
-  <a href="img/blobfishsongchordsheet.pdf" download>
-    <button class="btn" style="margin-bottom: 3%;"><i class="fa fa-download"></i> Download</button>
+  <iframe width="853" height="505" src="https://www.youtube.com/embed/jqXh8oO6xPE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </a>
 </div>
 
-<p style="margin-bottom: 5%; font-size: 30px;">This is a song a friend and I wrote on one random day where we both were very bored. We decided we were gonna write a song and the first thing that came out of my mouth was "Why don't we
-  write a song about blobfish? We can look up some random facts and it will be a fun educational adventure!". So I hope you enjoy this wonderfuly weird song. </p>
-
-<div style="margin-left: 10%; margin-right: 10%; margin-top: 3%;">
-  <iframe width="853" height="480" src="https://www.youtube.com/embed/3894C2AB8xA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <div style="text-align: center;"><p>Click the download button to download chord sheet.</p></div>
-  <a href="img/thewayIdo-chordsheet.pdf" download>
-    <button class="btn"><i class="fa fa-download"></i> Download</button>
-  </a>
-</div>
-
-<p style="margin-bottom: 5%; font-size: 30px;">This is a cover from one of my absolute favorite musicals of all time. (And that's saying a lot I love musicals) It's called Starship,
-the song I covered was called "The Way I Do" by Darren Criss. Making this cover taught me that even though I'm not great at singing I still do my best and I can release it to the world!</p>
+<p style="margin-bottom: 5%; font-size: 30px;">This song is about when you have a really good friend in your life and you really don't want to lose them. When I wrote this song I wanted it to be very
+clear that it wasn't just someone you like and want to stay friends with but that you have almost everything in common. It's also not about a friend that you've had since you we're in first grade. This is about someone that you have been friends with for a few months or so and you really don't want it
+to end up like your lost friendships in the past. When I wrote this song I was in a similar situation. I had a friend who I really got along with and felt was not one of those "filler friends". You know
+the ones you talk to every once in a while but you don't like them that much. So I wrote a song about that experience. Enjoy!</p>
 
 <footer>
   <img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/profile-pic-6.png" alt="Logo" />
