--- a/drawings17.html
+++ b/drawings17.html
@@ -23,6 +23,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
+      <a href="drawings19.html">2019</a>
       <a href="drawings18.html">2018</a>
       <a href="drawings17.html">2017</a>
     </div>
