--- a/drawings18.html
+++ b/drawings18.html
@@ -24,6 +24,7 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
+      <a href="drawings19.html">2019</a>
       <a href="drawings18.html">2018</a>
       <a href="drawings17.html">2017</a>
     </div>
@@ -104,13 +105,13 @@
 
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/lauren.png" alt="Drawing of Lauren"  />
-    <div>Name: Lauren <br /> Medium: Copic Markers <br /> Date: 6/1/18</div>
+    <img class="centered myImg" src="img/lauren.png" alt="Drawing of Rose"  />
+    <div>Name: Rose <br /> Medium: Copic Markers <br /> Date: 6/1/18</div>
   </div>
 
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/me.png" alt="Drawing of Me"  />
-    <div>Name: Me <br /> Medium: Copic Markers <br /> Date: 5/26/18</div>
+    <div>Name: Drawing of Me (2018) <br /> Medium: Copic Markers <br /> Date: 5/26/18</div>
   </div>
 
   <div class="caption pic-margin">
