--- a/drawings19.html
+++ b/drawings19.html
@@ -43,8 +43,13 @@
   <h2>2019</h2>
 
   <div class="caption pic-margin">
+    <img class="centered myImg" src="img/simonS.png" alt="Drawing of Simon Speir from the moive Love, Simon"  />
+    <div>Name: Simon Spier <br /> Medium: Acrylic Paint <br /> Date: 2/16/19</div>
+  </div>
+
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/me2019.png" alt="Drawing of me in 2019"  />
-    <div>Name: Drawing of Me (2019) <br /> Medium: Acrylic Paint <br /> Date: 1/13/19</div>
+    <div>Name: Drawing of Me (2019) <br /> Medium: Digital <br /> Date: 1/13/19</div>
   </div>
 
   <!-- The Modal -->
