--- a/music.html
+++ b/music.html
@@ -26,15 +26,20 @@
     <a href="drawings17.html">2017</a>
   </div>
 </div>
-<a href="music.html">My Music</a>
+<a href="index.html">Home</a>
+<div class="dropdown">
+  <button class="dropbtn">Music
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-content">
+    <a href="music.html">Randomly Smile</a>
+  </div>
 </div>
 
   <div class="header">
   </div>
 
-  <h1>Introduction</h1>
-
-  <p style="margin-top: 50px; font-size: 25px;">
+  <p style="margin-top: 50px; font-size: 25px; margin-top:5%;">
     I only recently learned how to play the ukulele by watching YouTube and I really enjoy it. But I have been playing piano for about four years but in the year 2018 I have been learning Guitar.
     I really like musicals so a lot of the things I want to learn are from musicals. I also really love writing my
     own songs. The more I get into music and wanting to write my own songs the more I realize that I'm not the best at singing but I can create art that I want and no one can stop me. So if I want
@@ -42,16 +47,13 @@
     what the song is about. So that's the music part of my website, enjoy!
   </p>
 
+<h1>Randomly Smile</h1>
+<h2>2019</h2>
 
   <div style="margin-left: 10%; margin-right: 10%; margin-top: 3%;">
-    <iframe width="853" height="505" src="https://www.youtube.com/embed/qWU72e0PduA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="853" height="505" src="https://www.youtube.com/embed/seo_yGcsLwg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </a>
   </div>
-
-<div style="margin-left: 10%; margin-right: 10%; margin-top: 3%;">
-  <iframe width="853" height="505" src="https://www.youtube.com/embed/jqXh8oO6xPE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </a>
-</div>
 
 <footer>
   <img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/profile-pic-6.png" alt="Logo" />
