--- a/drawings18.html
+++ b/drawings18.html
@@ -29,8 +29,14 @@
       <a href="drawings17.html">2017</a>
     </div>
   </div>
-  <a href="music.html">My Music</a>
-</div>
+  <div class="dropdown">
+    <button class="dropbtn">Music
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="music.html">Randomly Smile</a>
+    </div>
+  </div>
 
 <div class="main">
   <h1>Introduction</h1>
