--- a/drawings19.html
+++ b/drawings19.html
@@ -37,8 +37,6 @@
     </div>
   </div>
 
-  <h1>Introduction</h1>
-
   <p style="margin-top: 50px; font-size: 25px;">
   This is my drawing progress from 2019. After a year with the mindset of getting better at drawing I feel like I still want to improve but I won't think of it as a
   journey but more of something I like to do as a hobby. I still love drawing so much and I never want to stop but I just am thinking about the fun I have in it more
@@ -47,6 +45,21 @@
   </p>
 
   <h2>2019</h2>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img\AdrianP.png" alt="Drawing of Adrian Peterson (Original Character)"  />
+    <div>Name: Adrian Peterson (Original Character) <br /> Medium: Digital <br /> Date: 6/2/19</div>
+  </div>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img\ArloG.png" alt="Drawing of Arlo Grayson (Original Character)"  />
+    <div>Name: Arlo Grayson <br /> Medium: Digital <br /> Date: 5/31/19</div>
+  </div>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img\AveryS-JaydenW.png" alt="Drawing of Avery Summers and Jayden Woods (Original Characters)"  />
+    <div>Name: Avery Summers and Jayden Woods (Original Characters) <br /> Medium: Digital <br /> Date: 5/31/19</div>
+  </div>
 
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/simonS.png" alt="Drawing of Simon Speir from the moive Love, Simon"  />
